// Copyright 2019 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package recipes.build.android.avd_packager;

message InputProperties {
  // src-relative paths to files containing Avd messages.
  // See http://bit.ly/2kku0uG for the Avd message definition in chromium/src.
  repeated string avd_configs = 1;
}
